--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "im-art",
+  "name": "ufes-bot",
   "version": "1.0.0",
   "description": "Twitter's API handler",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index.js"
   },
   "author": "Matheus Schreiber",
   "license": "ISC",
