--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Twitter's API handler",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "Matheus Schreiber",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.18.2",
     "nodemailer": "^6.8.0",
     "twit": "^2.2.11"
   }
