--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,7 @@ name: worker
 # on: workflow_dispatch
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron:  '50 21 * * *'
 jobs:
   tweet:
     runs-on: ubuntu-latest
