--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,10 +1,8 @@
 name: worker
 # on: workflow_dispatch
 on:
-  push:
-    branches: [ master ]
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '0 7 * * *'
 jobs:
   tweet:
     runs-on: ubuntu-latest
